api seperated for customer template metadata azure
